2005-02-16  Martin Hunt  <hunt@redhat.com>

	* generic/gdbtk-stack.c (get_frame_name): Replace
	print_address_numeric with deprecated_print_address_numeric.
	* generic/gdbtk-cmds.c (gdbtk_load_asm): Ditto.

2005-02-07  Keith Seitz  <kseitz@sources.redhat.com>

	* generic/gdbtk-cmds.c (gdb_eval): VALUE_EMBEDDED_OFFSET and
	VALUE_CONTENTS are now functions.


2005-01-19  Keith Seitz  <kseitz@sources.redhat.com>

	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* plugins/Makefile.in; Regenerate.
	* plugins/aclocal.m4: Regenerate.

2005-01-17  Keith Seitz  <kseitz@sources.redhat.com>

	* generic/gdbtk-varobj.c (variable_value): Remove all instances
	of error_last_message. It's gone.

	* generic/gdbtk-wrapper.c: Include exceptions.h
	* generic/gdbtk-cmds.c: Likewise.
	* generic/gdbtk-interp.c: Likewise.
	(gdbtk_interpreter_exec): Change return type to struct
	exception. Return exception_none.	

2005-01-13  Keith Seitz  <keiths@redhat.com>

	* configure.in: Rename to ...
	* configure.ac: ... this.
	* configure: Regenerate with autoconf 2.59.
	* plugins/configure.in: Rename to ...
	* plugins/configure.ac: ... this.
	* pluginx/configure: Regenerate with autoconf 2.59.
